configs/envoyproxy_io_proxy_http3_downstream.template.yaml
# An example config which accepts HTTP/3 and forwarads the requests upstream over TCP.
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_udp
      address:
        socket_address:
          protocol: UDP
          address: 0.0.0.0
          port_value: 10000
      reuse_port: true
      udp_listener_config:
        quic_options: {}
        downstream_socket_config:
          prefer_gro: true
      filter_chains:
        transport_socket:
          name: envoy.transport_sockets.quic
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
            downstream_tls_context:
              common_tls_context:
                alpn_protocols: h3
                tls_certificates:
                  certificate_chain:
                    filename: test/config/integration/certs/servercert.pem
                  private_key:
                    filename: test/config/integration/certs/serverkey.pem
        filters:
        - name: envoy.filters.network.http_connection_manager
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            codec_type: HTTP3
            stat_prefix: ingress_http
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                response_headers_to_add:
                  - header:
                      key: alt-svc
                      value: h3=":10000"; ma=86400, h3-29=":10000"; ma=86400
                domains: ["*"]
                routes:
                - match:
                    prefix: "/"
                  route:
                    host_rewrite_literal: www.envoyproxy.io
                    cluster: service_envoyproxy_io
            http3_protocol_options:
            http_filters:
            - name: envoy.filters.http.router
  clusters:
  - name: service_envoyproxy_io
    connect_timeout: 30s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_envoyproxy_io
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.envoyproxy.io
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.envoyproxy.io
